--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -15,48 +15,21 @@
             <ul id="navbar">
                 <li id="logo">
                     <a href="#">
-                        <img src="img/logo_apple.svg" alt="Apple Store" />
+                        <img src="img/logo_apple.svg" alt="Apple Store">
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        Loja
-                    </a>
-                <li>
-                    <a href="#">
-                        Mac
-                    </a>
-                <li>
-                    <a href="#">
-                        iPad
-                    </a>
-                <li>
-                    <a href="#">
-                        iPhone
-                    </a>
-                <li>
-                    <a href="#">
-                        watch
-                    </a>
-                <li>
-                    <a href="#">
-                        Airpods
-                    </a>
-                <li>
-                    <a href="#">
-                        Só na Apple
-                    </a>
-                <li>
-                    <a href="#">
-                        Acessórios
-                    </a>
-                <li>
-                    <a href="#">
-                        Suporte
-                    </a>
-                </li>
+                <li><a href="#">Loja</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">Só na Apple</a></li>
+                <li><a href="#">Acessórios</a></li>
+                <li><a href="#">Suporte</a></li>
             </ul>
         </nav>
+
         <div id="bottom-header">
             <div id="bottom-header-inner">
                 <h3>iPhone 13 Pro</h3>
@@ -66,42 +39,57 @@
                     <a href="#">Especificações</a>
                     <a href="#" class="btn">Comprar</a>
                 </div>
+            </div>
+        </div>
     </header>
+
     <div id="ribbon">
-        <p>Pague seu novo iPhone em até 12 parcelas ou economize 10% nos pagamentos à vista. <a href="#">Saiba mais</a>
+        <p>
+            Pague seu novo iPhone em até 12 parcelas ou economize 10% nos pagamentos à vista.
+            <a href="#">Saiba mais</a>
         </p>
     </div>
-    <h1 id="title">iPhone 13 Pro</h1>
-    <p id="subtitle">É todo Pro.</p>
-    <p id="description"> O iPhone 13 pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo o que vocêz faz e
-        vem com novos recursos espetaculares para fotos e vídeos. Tudo em dois tamanhos</p>
-    <p id="price">A partir de R$ 9.499,00</p>
-    <a href="#" class="btn">Comprar</a>
-    <img id="product-image" src="img/iphone_green.jpg" alt="iPhone 13 Pro" />
-    <div id="image-picker">
-        <ul>
-            <li id="green">
-                <span class="color selected"></span>
-                <span class="description">Verde-alpino</span>
-            </li>
-            <li id="silver">
-                <span class="color"></span>
-                <span class="description">Prateado</span>
-            </li>
-            <li id="golden">
-                <span class="color"></span>
-                <span class="description">Dourado</span>
-            </li>
-            <li id="grafite">
-                <span class="color"></span>
-                <span class="description">Grafite</span>
-            </li>
-            <li id="Blue">
-                <span class="color"></span>
-                <span class="description">Azul-sierra</span>
-            </li>
-        </ul>
-    </div>
+    <main id="main-content">
+        <h1 id="title">iPhone 13 Pro</h1>
+        <p id="subtitle">É todo Pro</p>
+
+        <p id="description">
+            O iPhone 13 Pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo o que você faz
+            e vem com novos recursos espetaculares para fotos e vídeos. Tudo em dois tamanhos.
+        </p>
+
+        <p id="price">A partir de R$ 9.499,00</p>
+
+        <a href="#" class="btn">Comprar</a>
+
+        <img id="product-image" src="img/iphone_green.jpg" alt="iPhone 13 Pro">
+
+        <div id="image-picker">
+            <ul>
+                <li id="green">
+                    <span class="color selected"></span>
+                    <span class="description">Verde-alpino</span>
+                </li>
+                <li id="silver">
+                    <span class="color"></span>
+                    <span class="description">Prateado</span>
+                </li>
+                <li id="golden">
+                    <span class="color"></span>
+                    <span class="description">Dourado</span>
+                </li>
+                <li id="grafite">
+                    <span class="color"></span>
+                    <span class="description">Grafite</span>
+                </li>
+                <li id="blue">
+                    <span class="color"></span>
+                    <span class="description">Azul-sierra</span>
+                </li>
+            </ul>
+        </div>
+    </main>
+
 </body>
 
 </html>
